refactor: make list creation compatible with java 8